--- a/src/index.html
+++ b/src/index.html
@@ -65,9 +65,9 @@
           <a href="#!" class="brand-logo">TeamSeeker</a>
           <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="#">主页</a></li>
-            <li><a href="#">个人空间</a></li>
-            <li><a href="#">创建项目</a></li>
+            <li><a href="index.html">主页</a></li>
+            <li><a href="createUser.html">个人空间</a></li>
+            <li><a href="publish.html">创建项目</a></li>
           </ul>
           
           <ul id="slide-out" class="side-nav">
@@ -79,9 +79,9 @@
               <a href="#!name"><span class="white-text name">Lapras</span></a>
               <a href="#!email"><span class="white-text email">chengtiyanyang@gmail.com</span></a>
             </div></li>
-            <li><a class="waves-effect" href="#"><i class="material-icons">home</i>主页</a></li>
-            <li><a class="waves-effect" href="#"><i class="material-icons">person_pin</i>个人空间</a></li>
-            <li><a class="waves-effect" href="#"><i class="fa fa-sign-in" aria-hidden="true"></i>创建项目</a></li>
+            <li><a class="waves-effect" href="index.html"><i class="material-icons">home</i>主页</a></li>
+            <li><a class="waves-effect" href="createUser.html"><i class="material-icons">person_pin</i>个人空间</a></li>
+            <li><a class="waves-effect" href="publish.html"><i class="fa fa-sign-in" aria-hidden="true"></i>创建项目</a></li>
           </ul>
         </div>
         </div>
