fix the bug that information doesn't show

--- a/src/createUser.html
+++ b/src/createUser.html
@@ -103,7 +103,7 @@
       </div>
 
       <div class="row">
-        <form class="col s12">
+        <form class="col s12" target="nm_iframe">
           <div class="row">
             <div class="input-field col s12">
               <input id="name" type="text" class="validate">
@@ -128,6 +128,7 @@
             </button>
           </div>
         </form>
+        <iframe id="id_iframe" name="nm_iframe" style="display:none;"></iframe> 
       </div>   
     </div>
         
