Add constraint on publish function.

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,10 @@
           flex: 1 0 auto;
         }
 
+        nav, .page-footer {
+          background-color: #546e7a;
+        }
+
         textarea.materialize-textarea, input[type=text], input[type=tel], input[type=email] {
           border-bottom: 1px solid white;
         }
@@ -32,7 +36,7 @@
         }
 
         .slider .indicators .indicator-item.active {
-          background-color: #ee6e73;
+          background-color: #546e7a;
         }
 
         .card.small {
@@ -45,7 +49,7 @@
         }
 
         .card .card-action a:not(.btn):not(.btn-large):not(.btn-large):not(.btn-floating) {
-          color: #ee6e73;
+          color: #546e7a;
           margin-right: 24px;
           transition: color .3s ease;
           text-transform: uppercase;
@@ -90,18 +94,18 @@
   <div class="slider">
     <ul class="slides">
       <li>
-        <img src="img/gz2.jpg"> 
-        <div class="caption center-align">
-          <h3>Title</h3>
+        <img src="img/net+.jpg"> 
+        <!-- <div class="caption left-align">
+          <h3>中国“互联网+”学生创新创业大赛</h3>
           <h5 class="light grey-text text-lighten-3">Intro</h5>
-        </div>
+        </div> -->
       </li>
       <li>
-        <img src="img/gz.jpg"> 
-        <div class="caption left-align">
+        <img src="img/icpc_logo.png" style="background-color: white"> 
+        <!-- <div class="caption left-align">
           <h3>Title</h3>
           <h5 class="light grey-text text-lighten-3">Intro</h5>
-        </div>
+        </div> -->
       </li>
     </ul>
   </div>
@@ -167,7 +171,7 @@
       
     <div id="pagination"></div>
   
-  <ul class="pagination center-align">
+  <!-- <ul class="pagination center-align">
     <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
     <li class="active"><a href="#!">1</a></li>
     <li class="waves-effect"><a href="#!">2</a></li>
@@ -175,7 +179,7 @@
     <li class="waves-effect"><a href="#!">4</a></li>
     <li class="waves-effect"><a href="#!">5</a></li>
     <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
-  </ul>
+  </ul> -->
         
   <footer class="page-footer">
     <div class="footer-copyright">
