--- a/src/publish.html
+++ b/src/publish.html
@@ -23,6 +23,10 @@
           flex: 1 0 auto;
         }
 
+        nav, .page-footer, .btn {
+          background-color: #546e7a;
+        }
+
         .input-field label {
           color: white;
         }
@@ -92,12 +96,12 @@
       </nav>
 
       <div class="parallax-container">
-        <div class="parallax"><img src="https://okdkbnczs.qnssl.com/image/movies/loveu.jpg"></div>
+        <div class="parallax"><img src="img/net+.jpg"></div>
       </div>
 
     <div class="container">
       <div class="s12 m6">
-        <div class="center-align grey-text text-darken-4">
+        <div class="center-align blue-grey-text text-darken-1">
           <h3>创建项目</h3>
         </div>
       </div>
@@ -135,7 +139,6 @@
                   <option value="" disabled selected>选择初始状态</option>
                   <option value="pending">准备中</option>
                   <option value="processing">进行中</option>
-                  <option value="ended">已结束</option>
                 </select>
                 <label for="status">项目初始状态</label>
               </div>
