--- a/src/createUser.html
+++ b/src/createUser.html
@@ -23,6 +23,10 @@
           flex: 1 0 auto;
         }
 
+        nav, .page-footer, .btn {
+          background-color: #546e7a;
+        }
+
         .input-field label {
           color: white;
         }
@@ -92,12 +96,12 @@
       </nav>
 
       <div class="parallax-container">
-        <div class="parallax"><img src="https://okdkbnczs.qnssl.com/image/movies/loveu.jpg"></div>
+        <div class="parallax"><img src="img/icpc_logo.png"></div>
       </div>
 
     <div class="container">
       <div class="s12 m6">
-        <div class="center-align grey-text text-darken-4">
+        <div class="center-align blue-grey-text text-darken-1">
           <h3>创建账号</h3>
         </div>
       </div>
